--- a/styles/stylelastyr.css
+++ b/styles/stylelastyr.css
@@ -90,7 +90,7 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-}
+} 
 
 .card-body {
   padding: 15px;
@@ -98,7 +98,7 @@ h2 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10px; /* Optional: Add space between the button and the swipe container */
+  gap: 10px;
 }
 
 .card {
