--- a/styles/style.css
+++ b/styles/style.css
@@ -22,21 +22,22 @@ body.dark {
 }
 
 header {
-    background-color: #f4f4f4;
+    background-color: #f7f7f7;
     /* Light background for header */
     color: #333;
     padding: 20px;
     display: flex;
     align-items: center;
-    /* Align items vertically center */
     justify-content: space-between;
-    /* Space between heading and nav */
     border-bottom: 2px solid #ddd;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     position: sticky;
     top: 0;
     z-index: 1000;
     transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
+    backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(3px);
 }
 
 nav {
@@ -65,6 +66,8 @@ body.dark header {
     background-color: #111;
     /* Darker shade for dark theme header */
     color: #eee;
+    background-color: rgba(255, 255, 255, 0.036);
+    backdrop-filter: blur(5px);
 }
 
 .department-title {
