--- a/styles/soft.css
+++ b/styles/soft.css
@@ -57,8 +57,8 @@
  /* Dark Theme */
  body.dark {
    background: linear-gradient(126deg, #648ccf80, #0000009e);
-   color: #fff;
-   /* White text in dark theme */
+   color: #fff; 
+   
  }
 
  body.dark header,
@@ -98,6 +98,7 @@
    top: 0;
    z-index: 1000;
    transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
+   backdrop-filter: blur(5px);
  }
 
  /* Dark Mode Header */
