--- a/styles/syllabusstyle.css
+++ b/styles/syllabusstyle.css
@@ -20,7 +20,7 @@ body.dark {
 
 /* Header Styles */
 header {
-    background-color: #f4f4f4; /* Light background for header */
+    /* background-color: #f4f4f4; Light background for header */
     color: #333;
     padding: 20px;
     display: flex;
@@ -32,12 +32,16 @@ header {
     top: 0;
     z-index: 1000;
     transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(3px);
 }
 
 body.dark header {
-    background-color: #000000; /* Darker shade for dark theme header */
+    /* background-color: #000000; Darker shade for dark theme header */
     color: #eee;
     border-bottom: 1px solid #444; /* Darker border for header */
+    background-color: rgba(255, 255, 255, 0.036);
+    backdrop-filter: blur(5px);
 }
 
 .department-title {
