--- a/contacts/contact.css
+++ b/contacts/contact.css
@@ -18,10 +18,10 @@ body {
 }
 
 .contact-box {
-  background-color: rgba(26, 26, 26, 0.2); /* Slightly transparent black */
+  /* background-color: rgba(26, 26, 26, 0.2); Slightly transparent black */
   /* background-color: rgba(26, 26, 26, 0);  For fully transparent background */
   border-radius: 15px;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+  /* box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5); */
   padding: 40px;
   text-align: center;
   width: 400px;
@@ -36,7 +36,7 @@ body {
 
 .contact-box:hover {
   transform: translate(-50%, -50%) scale(1.05); /* Now scales up from the center */
-  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.7);
+  /* box-shadow: 0 12px 24px rgba(0, 0, 0, 0.7); */
 }
 
 .profile-image {
