--- a/styles/style.css
+++ b/styles/style.css
@@ -125,10 +125,10 @@ body.dark main {
 
 /* Section Styles */
 .content-section {
+    display: flex;
     margin-bottom: 40px;
     padding: 30px;
     background-color: #f9f9f9;
-    /* Light background for sections */
     border: 1px solid #ddd;
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -137,6 +137,7 @@ body.dark main {
     overflow: hidden;
     transform: translateY(0);
     animation: fadeInUp 0.7s ease;
+    flex-direction: column;
 }
 
 body.dark .content-section {
@@ -181,42 +182,36 @@ body.dark .content-section:hover {
 
 /* Section Heading */
 .content-section h2 {
-    margin-top: 0;
-    color: inherit;
+    margin: 0;
+    display: flex;
     font-size: 22px;
     font-weight: bold;
+
+    .svgl {
+        display: none;
+        margin-right: 10px;
+    }
+}
+
+body.dark .svgl {
+    display: inline;
+}
+
+body.dark .svgd {
+    display: none;
+    margin-right: 10px;
 }
 
 /* Section Paragraph */
-.content-section p {
-    color: #666;
-    /* Slightly lighter text color */
-    margin-bottom: 0;
-    line-height: 1.5;
+.content-section h4 {
+    /* margin: 0; */
+    color: #363636;
 }
 
-body.dark .content-section p {
-    color: #ccc;
-    /* Lighter text color in dark mode */
+body.dark .content-section h4{
+    color: rgba(183, 183, 180, 0.903);
 }
 
-/* Footer Styles */
-footer {
-    background-color: #f4f4f4;
-    /* Light background for footer */
-    color: #333;
-    text-align: center;
-    padding: 15px 0;
-    border-top: 2px solid #ddd;
-    box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
-    transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
-}
-
-body.dark footer {
-    background-color: #111;
-    /* Darker shade for dark theme footer */
-    color: #eee;
-}
 
 .profile-icon,
 .contact-icon,
@@ -622,3 +617,66 @@ a {
 body.dark a {
     color: whitesmoke;
 }
+
+/* Footer Styles */
+footer {
+    background-color: #f4f4f4;
+    color: #333;
+    text-align: center;
+    padding: 0px 0;
+    border-top: 2px solid #ddd;
+    box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
+}
+
+body.dark footer {
+    background-color: #111;
+    color: #eee;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+    
+}
+
+.footer-section {
+    flex: 1;
+    margin: 10px;
+    min-width: 200px;
+    text-align: left;
+}
+
+.footer-section h3 {
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.footer-section a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.footer-section a:hover {
+    text-decoration: underline;
+}
+
+.footer-bottom {
+    background-color: #222;
+    padding: 10px ;
+    margin-top: 20px;
+    color: #ccc;
+    font-size: 14px;
+}
+
+body.dark .footer-bottom {
+    background-color: #111;
+    color: #eee;
+}
+
