styles for other pages

--- a/styles/style.css
+++ b/styles/style.css
@@ -668,10 +668,10 @@ body.dark footer {
 }
 
 .footer-bottom {
-    background-color: #222;
+    background-color: #eee;
     padding: 10px ;
     margin-top: 20px;
-    color: #ccc;
+    color: #141010;
     font-size: 14px;
 }
 
