--- a/styles/stylelastyr.css
+++ b/styles/stylelastyr.css
@@ -285,27 +285,6 @@ body.dark-theme .theme-switch::before {
     align-items: center;
   }
 }
-.contact-footer {
-  font-size: 20px; /* Increased font size */
-  color: var(--header-text-color); /* Ensure text color matches theme */
-  text-decoration: none; /* No underline */
-  cursor: pointer;
-  margin-top: 10px;
-  transition: color 0.3s ease-in-out; /* Smooth transition for color change */
-}
-
-body.dark .contact-footer {
-    color: #eee; /* Light text in dark theme */
-}
-
-footer .contact-footer {
-  color: var(--header-text-color); /* Inherits theme's header text color */
-}
-
-footer .contact-footer:hover {
-  color: var(--link-color); /* Optionally, change color on hover */
-}
-
 a {
   text-decoration: none;
   color: wheat
@@ -401,3 +380,63 @@ nav ul {
     align-items: center;
     gap: 15px;
 }
+
+/* Footer Styles */
+footer {
+  background-color: #333333;
+  color: #fef9f9;
+  text-align: center;
+  padding: 0px 0;
+  border-top: 2px solid #ddd;
+  box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
+}
+
+
+
+.footer-content {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  
+}
+
+.footer-section {
+  flex: 1;
+  margin: 10px;
+  min-width: 200px;
+  text-align: left;
+}
+
+.footer-section h3 {
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.footer-section a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.footer-section a:hover {
+  text-decoration: underline;
+}
+
+.footer-bottom {
+  background-color: #222;
+  padding: 10px ;
+  margin-top: 20px;
+  color: #ccc;
+  font-size: 14px;
+}
+
+body.dark .footer-bottom {
+  background-color: #111;
+  color: #eee;
+}
+
