--- a/styles/style.css
+++ b/styles/style.css
@@ -539,6 +539,9 @@ nav ul {
         height: 35px;
         margin-bottom: -10px;
     }
+    .footer-content{
+        flex-direction: column;
+    }
 
 }
 
@@ -628,6 +631,7 @@ footer {
     box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
     transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
     font-size: 13px;
+
 }
 
 body.dark footer {
@@ -643,14 +647,12 @@ body.dark footer {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
-}
-.about{
-    /* padding-right: 250px; */
+    /* flex-direction: column; */
 }
 
 .footer-section {
     flex: 1;
-    margin: 10px;
+    margin: 10px 50px; /* Increase horizontal margin */
     min-width: 200px;
     text-align: left;
 }
@@ -665,21 +667,3 @@ body.dark footer {
     color: inherit;
     text-decoration: none;
 }
-
-.footer-section a:hover {
-    text-decoration: underline;
-}
-
-.footer-bottom {
-    background-color: #eee;
-    padding: 10px ;
-    margin-top: 20px;
-    color: #141010;
-    font-size: 14px;
-}
-
-body.dark .footer-bottom {
-    background-color: #111;
-    color: #eee;
-}
-
