--- a/styles/style.css
+++ b/styles/style.css
@@ -190,7 +190,7 @@ body.dark .content-section:hover {
     .svgl {
         display: none;
         /* margin-right: 10px; */
-       /* padding: 5px; */
+        /* padding: 5px; */
     }
 }
 
@@ -210,7 +210,7 @@ body.dark .svgd {
     padding-left: 10px;
 }
 
-body.dark .content-section h4{
+body.dark .content-section h4 {
     color: rgba(183, 183, 180, 0.903);
 }
 
@@ -541,7 +541,8 @@ nav ul {
         height: 35px;
         margin-bottom: -10px;
     }
-    .footer-content{
+
+    .footer-content {
         flex-direction: column;
     }
 
@@ -654,7 +655,8 @@ body.dark footer {
 
 .footer-section {
     flex: 1;
-    margin: 10px 50px; /* Increase horizontal margin */
+    margin: 10px 50px;
+    /* Increase horizontal margin */
     min-width: 200px;
     text-align: left;
 }
@@ -668,4 +670,18 @@ body.dark footer {
 .footer-section a {
     color: inherit;
     text-decoration: none;
+}
+
+.footer-section a {
+    color: inherit;
+    text-decoration: none;
+    margin: 0 10px;
+}
+
+.footer-section a:hover {
+    text-decoration: underline;
+}
+.pp{
+bottom: 20px;
+
 }
