--- a/styles/style.css
+++ b/styles/style.css
@@ -685,7 +685,7 @@ body.dark footer {
 .footer-section a {
     color: inherit;
     text-decoration: none;
-    margin: 0 10px;
+    /* margin: 0 10px; */
 }
 
 .footer-section a:hover {
